exemplos/balancer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: examples
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        args:
        - /bin/bash
        - -c
        - "envsubst < /usr/share/nginx/html/index.html.template >/usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /usr/share/nginx/html/index.html.template
          subPath: index.html
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "75Mi"
            cpu: "10m"
          limits:
            memory: "75Mi"
            cpu: "10m"
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
