exemplos/balancer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx.pvillaverde.ackstorm.io
  namespace: examples
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx.pvillaverde.ackstorm.io
      secretName: nginx-example-tls
  rules:
  - host: nginx.pvillaverde.ackstorm.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
